constraints/k8srequiredlabels.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sRequiredLabels
metadata:
  name: required-labels
spec:
  enforcementAction: deny
  match:
    scope: "Namespaced"
  # excludedNamespaces: ["kube-system","kube-public","kube-node-lease","fleet-system","cattle-system","cattle-gatekeeper-system"]
  kinds:
  - kinds: 
      - "Pod"
      - "Deployment"
      - "Service"
  namespaces: 
    - "default"
  parameters:
    labels: 
      key: contact
    message: "Missing mandatory label [contact]"
